made the full rough webpages,allignment fonts and responsiveness are still pending

--- a/Elton/STATIONARY.html
+++ b/Elton/STATIONARY.html
@@ -198,6 +198,101 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="stay flex">
+        <h3 class="child text-2xl font-medium">Stay in The Know</h3>
+        <p class="child text-sm">Subscribe to our newsletter and stay updated on latest offers, discounts and events near you.
+        </p>
+        <form action="">
+          <input type="text" class="child w-96" placeholder="Email ID" required>
+          <i class="fa-solid fa-arrow-right"></i>
+        </form>
+        <h3 class="child text-2xl font-medium">Follow us</h3>
+        <div class="icons child flex">
+          <div class="pic"><img class="w-full h-full"
+              src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Flogopng.com.br%2Flogos%2Ffacebook-13.png&f=1&nofb=1&ipt=5de064ff3495ecbb6960ee895cc8b217b87305afbba65a4d203b68c997c0bd49&ipo=images"
+              alt=""></div>
+          <div class="pic"><img class="w-full h-full"
+              src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.pngkey.com%2Fpng%2Ffull%2F2-27646_twitter-logo-png-transparent-background-logo-twitter-png.png&f=1&nofb=1&ipt=30adfe81ef5cd3703b809dd1c84f3d712542376d28a680f58daf75c21da72bde&ipo=images"
+              alt=""></div>
+          <div class="pic"><img class="w-full h-full"
+              src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.pngplay.com%2Fwp-content%2Fuploads%2F5%2FInstagram-Logo-PNG-Image-PNG.png&f=1&nofb=1&ipt=6e3af098394f67585f947e6e3b12792da0841bed7ccb8fde60786a5cd82c3e02&ipo=images"
+              alt=""></div>
+        </div>
+      </div>
+      <div class="cross">
+        <div class="flex parent">
+          <div class="one">
+            <div class="pic mb-3.5"><img class="w-full h-full"
+                src="https://www.crossword.in/cdn/shop/files/crossword_logo_2x_47410132-1f11-42e3-8e8f-9c93a6984d95.png?v=1678703716"
+                alt="">
+            </div>
+            <p class="text-xs font-medium leading-6 mb-3.5">Crossword Bookstores draws book lovers of all ages into a
+              community where they can discover great books,
+              engage with booklovers and meet their favourite literary personalities. </p>
+            <ul class="text-xs font-semibold">
+              <li class="mb-1.5"><i class="fa-solid fa-envelope text-base"></i><a class="pl-2" href="">
+                  estore@crossword.in</a></li>
+              <li class="flex justify-start">
+                <div class="minipic"><img class="w-full h-full"
+                    src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fclipart.info%2Fimages%2Fccovers%2F1499955335whatsapp-icon-logo-png.png&f=1&nofb=1&ipt=b9d3d180156354ceb7cb80233c86cbf50e0f6ce68d1044b4fe86021068e6abfe&ipo=images"
+                    alt=""></div><a class="pl-2" href="">+91 8530206759</a>
+              </li>
+            </ul>
+          </div>
+          <div class="two under-line">
+            <h3 class="mb-4 text-base font-semibold">Category</h3>
+            <ul class="text-xs">
+              <li class="mb-1.5"><a href="">New & Noteworthy</a></li>
+              <li class="mb-1.5"><a href="">Top 50 </a></li>
+              <li class="mb-1.5"><a href="">Crossword Recommends</a></li>
+              <li class="mb-1.5"><a href="">Books</a></li>
+              <li class="mb-1.5"><a href="">Kids Books</a></li>
+              <li class="mb-1.5"><a href="">Toys & Games </a></li>
+              <li class="mb-1.5"><a href="">Stationery & Gifts</a></li>
+              <li class="mb-1.5"><a href="">Crossword Gift Card</a></li>
+              <li class="mb-1.5"><a href="">The Write Place</a></li>
+            </ul>
+          </div>
+          <div class="three under-line">
+            <h3 class="mb-4 text-base font-semibold">Useful links</h3>
+            <ul class="text-xs">
+              <li class="mb-1.5"><a href="">Secure Shopping</a></li>
+              <li class="mb-1.5"><a href="">Privacy Policy</a></li>
+              <li class="mb-1.5"><a href="">Terms of Use</a></li>
+              <li class="mb-1.5"><a href="">Shipping Policy</a></li>
+              <li class="mb-1.5"><a href="">Return Policy</a></li>
+              <li class="mb-1.5"><a href="">Payment Option</a></li>
+              <li class="mb-1.5"><a href="">Crossword Gift Card T&C</a></li>
+            </ul>
+          </div>
+          <div class="four under-line">
+            <h3 class="mb-4 text-base font-semibold">About us</h3>
+            <ul class="text-xs">
+              <li class="mb-1.5"><a href="">About us </a></li>
+              <li class="mb-1.5"><a href="">Store Locator</a></li>
+              <li class="mb-1.5"><a href="">Kids Club</a></li>
+            </ul>
+          </div>
+          <div class="five under-line">
+            <h3 class="mb-4 text-base font-semibold">Get in Touch</h3>
+            <ul class="text-xs">
+              <li class="mb-1.5"><a href="">Careers</a></li>
+              <li class="mb-1.5"><a href="">Become a Franchisee</a></li>
+              <li class="mb-1.5"><a href="">Contact Us</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="last flex justify-between text-xs">
+        <div class="trademark">
+          © 2024 Crossword Bookstores Pvt. Ltd. All Rights Reserved.
+        </div>
+        <div class="card">
+          <img src="https://cdn.shopify.com/s/files/1/0648/3066/9017/files/Image-176.png" alt="">
+        </div>
+      </div>
+    </footer>
   </main>
 
 
