--- a/Elton/TOP50.html
+++ b/Elton/TOP50.html
@@ -212,7 +212,8 @@
     <footer>
       <div class="stay flex">
         <h3 class="child text-2xl font-medium">Stay in The Know</h3>
-        <p class="child text-sm">Subscribe to our newsletter and stay updated on latest offers, discounts and events near you.
+        <p class="child text-sm">Subscribe to our newsletter and stay updated on latest offers, discounts and events
+          near you.
         </p>
         <form action="">
           <input type="text" class="child w-96" placeholder="Email ID" required>
