updated Elton file with font family

--- a/Ibrahim/HomePage/HomePage.html
+++ b/Ibrahim/HomePage/HomePage.html
@@ -1717,6 +1717,9 @@
           </div>
         </div>
 
+      </section>
+      
+      <footer>
         <hr class="w-full h-px" />
 
         <footer class="2xl:px-56 xl:px-40 lg:px-16 px-4 py-8">
@@ -1863,7 +1866,8 @@
             </div>
           </div>
         </footer>
-      </section>
+
+        </footer>
     </div>
   </body>
 </html>
