--- a/Ibrahim/find my order/findmyorder.html
+++ b/Ibrahim/find my order/findmyorder.html
@@ -54,10 +54,10 @@
       <div class="flex justify-center items-center py-16 text-3xl ">
          <h1>Locate Our Stores</h1>
       </div>
-      <div class="flex h-[40rem] px-16 gap-8 py-8 bg-[#E3E5F5]">
+      <div class="lg:flex block lg:h-[40rem] h-full px-16 gap-8 py-8 bg-[#E3E5F5]">
 
         <!-- Left Section -->
-        <div class="w-3/12 p-6 overflow-y-auto bg-[#f2f2fa] rounded border-2">
+        <div class="xl:w-3/12 lg:4/12 w-full p-6 lg:overflow-y-auto overflow-hidden bg-[#f2f2fa] rounded border-2 lg:mb-0 mb-4">
     
           <!-- Search Box -->
           <div class="mb-6">
@@ -105,7 +105,7 @@
     
         </div>
 
-        <div class="w-9/12 ">
+        <div class="xl:w-9/12 lg:7/12 w-full ">
             <!-- Google Map iframe -->
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15281527.263685085!2d72.10809512517388!3d20.75721265177788!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1710661038766!5m2!1sen!2sin"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-full h-full"></iframe>
           </div>
