--- a/Ibrahim/sign_in/signin.html
+++ b/Ibrahim/sign_in/signin.html
@@ -855,9 +855,9 @@
     <div class="flex my-32">
 
 
-    <div class="w-5/12 h-96 bg-cover bg-center background-image"></div>
+    <div class="w-5/12 h-96 bg-cover bg-center background-image lg:block hidden"></div>
 
-    <div class="w-7/12 flex items-center justify-center">
+    <div class="lg:w-7/12 w-full flex items-center justify-center">
       <div class="max-w-md w-full px-12 py-16 bg-white shadow-md rounded-lg border">
         <h2 class="text-2xl font-semibold text-gray-700 mb-8 border-b-2 border-black pb-4">Sign In</h2>
 
