--- a/Elton/STATIONARY.html
+++ b/Elton/STATIONARY.html
@@ -8,16 +8,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet"
-  />
   <link rel="stylesheet" href="STATIONARYstyles.css">
   <title>Document</title>
 </head>
 
 <body>
-  <div class="navbar">
+  <div class="navbar overflow-x-hidden">
     <nav class="px-48 py-1 bg-black">
       <ul class="flex justify-end text-white text-sm relative">
         <li>
@@ -71,7 +67,7 @@
       <aside class="">
         <span class="">FILTERS</span>
         <div class="Category border-slate-700 border-2 w-8/12 p-2 mb-3.5">
-          <p class="flex justify-between"><span>Category</span><i class="fa-solid fa-angle-up font-extralight"></i></p>
+          <p class="flex justify-between"><span class="head_ing font-semibold mb-2">Category</span><i class="fa-solid fa-angle-up font-extralight"></i></p>
           <input type="checkbox">
           <label for="vehicle1" class="mx-0.5 mb-2.5"> Stationanry & Gifts </label><span
             class="text-gray-500">(948)</span>
@@ -80,21 +76,21 @@
           <label for="vehicle1" class="mx-0.5 mb-2.5"> Books </label><span class="text-gray-500">(31)</span>
         </div>
         <div class="Genre border-slate-700 border-2 w-8/12 p-2 mb-2.5">
-          <p class="flex justify-between"><span>Genre</span><i class="fa-solid fa-angle-down"></i></p>
+          <p class="flex justify-between"><span class="head_ing font-semibold">Genre</span><i class="fa-solid fa-angle-down"></i></p>
         </div>
         <div class="Product border-slate-700 border-2 w-8/12 p-2 mb-2.5">
-          <p class="flex justify-between"><span>Product Type</span><i class="fa-solid fa-angle-down"></i></p>
+          <p class="flex justify-between"><span class="head_ing font-semibold">Product Type</span><i class="fa-solid fa-angle-down"></i></p>
         </div>
         <div class="Price border-slate-700 border-2 w-8/12 p-2 mb-2.5">
-          <p class="flex justify-between"><span>Price</span><i class="fa-solid fa-angle-down"></i></p>
+          <p class="flex justify-between"><span class="head_ing font-semibold">Price</span><i class="fa-solid fa-angle-down"></i></p>
         </div>
       </aside>
       <div class="right">
         <div class="sort border-slate-700 border-2 w-52 p-2 mb-2.5">
           <p class="flex justify-between"><span><span class="font-extrabold">Sort By : </span> Relevance</span><i
               class="fa-solid fa-angle-down"></i></p>
-        </div>
-        <div class="items flex pt-3">
+        </div> 
+        <div class="items flex flex-wrap pt-3 ml-2">
           <div class="item grow m-5 flex flex-col justify-center items-center">
             <div class="pic">
               <img class="w-full h-full"
@@ -140,14 +136,12 @@
                 alt="">
             </div>
             <div class="name mt-4"><a href="">Milan COMPACT Sunset mech...</a></div>
-            <div class="price mt-4 text-lg"><a href="">₹ 5249</a></div>
+            <div class="price mt-4 text-lg"><a href="">₹ 249</a></div>
             <div class="bag w-full flex justify-center items-center mt-2">
               <p>ADD TO BAG</p>
               <i class="fa-regular fa-heart"></i>
             </div>
           </div>
-        </div>
-        <div class="items flex pt-3">
           <div class="item grow m-5 flex flex-col justify-center items-center">
             <div class="pic">
               <img class="w-full h-full"
@@ -199,6 +193,162 @@
               <i class="fa-regular fa-heart"></i>
             </div>
           </div>
+          <div class="item grow m-5 flex flex-col justify-center items-center">
+            <div class="pic">
+              <img class="w-full h-full "
+                src="https://cdn.shopify.com/s/files/1/0648/3066/9017/products/61BpioviYUL._SL1381_360x.webp?v=1672901623"
+                alt="">
+            </div>
+            <div class="name mt-4"><a href="">OOLY Note Pals Sticky Not...</a></div>
+            <div class="price mt-4 text-lg"><a href="">₹269</a></div>
+            <div class="bag w-full flex justify-center items-center mt-2">
+              <p>ADD TO BAG</p>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div>
+          <div class="item grow m-5 flex flex-col justify-center items-center">
+            <div class="pic">
+              <img class="w-full h-full "
+                src="https://cdn.shopify.com/s/files/1/0648/3066/9017/products/IMG_4225_600x_3a8d013a-0465-42fb-9069-603b7ea46e89_360x.jpg?v=1672734093"
+                alt="">
+            </div>
+            <div class="name mt-4"><a href="">Bookmark Ornament Gan...</a></div>
+            <div class="price mt-4 text-lg"><a href="">₹490</a></div>
+            <div class="bag w-full flex justify-center items-center mt-2">
+              <p>ADD TO BAG</p>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div>
+          <div class="item grow m-5 flex flex-col justify-center items-center">
+            <div class="pic">
+              <img class="w-full h-full "
+                src="https://cdn.shopify.com/s/files/1/0648/3066/9017/files/51IYgMJvKZL._AC_SX679_360x.jpg?v=1698921405"
+                alt="">
+            </div>
+            <div class="name mt-4"><a href="">Legami-Erasable Gel Pen -...</a></div>
+            <div class="price mt-4 text-lg"><a href="">₹299</a></div>
+            <div class="bag w-full flex justify-center items-center mt-2">
+              <p>ADD TO BAG</p>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div>
+          <div class="item grow m-5 flex flex-col justify-center items-center">
+            <div class="pic">
+              <img class="w-full h-full "
+                src="https://cdn.shopify.com/s/files/1/0648/3066/9017/files/51kh4q8s1pL._AC_SX679_360x.jpg?v=1698914757"
+                alt="">
+            </div>
+            <div class="name mt-4"><a href="">Legami-Erasable Gel Pen -...</a></div>
+            <div class="price mt-4 text-lg"><a href="">₹299</a></div>
+            <div class="bag w-full flex justify-center items-center mt-2">
+              <p>ADD TO BAG</p>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div>
+          <div class="item grow m-5 flex flex-col justify-center items-center">
+            <div class="pic">
+              <img class="w-full h-full "
+                src=""
+                alt="">
+            </div>
+            <div class="name mt-4"><a href=""></a></div>
+            <div class="price mt-4 text-lg"><a href="">₹</a></div>
+            <div class="bag w-full flex justify-center items-center mt-2">
+              <p>ADD TO BAG</p>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div>
+          <div class="item grow m-5 flex flex-col justify-center items-center">
+            <div class="pic">
+              <img class="w-full h-full "
+                src=""
+                alt="">
+            </div>
+            <div class="name mt-4"><a href=""></a></div>
+            <div class="price mt-4 text-lg"><a href="">₹</a></div>
+            <div class="bag w-full flex justify-center items-center mt-2">
+              <p>ADD TO BAG</p>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div>
+          <div class="item grow m-5 flex flex-col justify-center items-center">
+            <div class="pic">
+              <img class="w-full h-full "
+                src=""
+                alt="">
+            </div>
+            <div class="name mt-4"><a href=""></a></div>
+            <div class="price mt-4 text-lg"><a href="">₹</a></div>
+            <div class="bag w-full flex justify-center items-center mt-2">
+              <p>ADD TO BAG</p>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div>
+          <div class="item grow m-5 flex flex-col justify-center items-center">
+            <div class="pic">
+              <img class="w-full h-full "
+                src=""
+                alt="">
+            </div>
+            <div class="name mt-4"><a href=""></a></div>
+            <div class="price mt-4 text-lg"><a href="">₹</a></div>
+            <div class="bag w-full flex justify-center items-center mt-2">
+              <p>ADD TO BAG</p>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div>
+          <div class="item grow m-5 flex flex-col justify-center items-center">
+            <div class="pic">
+              <img class="w-full h-full "
+                src=""
+                alt="">
+            </div>
+            <div class="name mt-4"><a href=""></a></div>
+            <div class="price mt-4 text-lg"><a href="">₹</a></div>
+            <div class="bag w-full flex justify-center items-center mt-2">
+              <p>ADD TO BAG</p>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div>
+          <div class="item grow m-5 flex flex-col justify-center items-center">
+            <div class="pic">
+              <img class="w-full h-full "
+                src=""
+                alt="">
+            </div>
+            <div class="name mt-4"><a href=""></a></div>
+            <div class="price mt-4 text-lg"><a href="">₹</a></div>
+            <div class="bag w-full flex justify-center items-center mt-2">
+              <p>ADD TO BAG</p>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div>
+          <div class="item grow m-5 flex flex-col justify-center items-center">
+            <div class="pic">
+              <img class="w-full h-full "
+                src=""
+                alt="">
+            </div>
+            <div class="name mt-4"><a href=""></a></div>
+            <div class="price mt-4 text-lg"><a href="">₹</a></div>
+            <div class="bag w-full flex justify-center items-center mt-2">
+              <p>ADD TO BAG</p>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div>
+          <div class="item grow m-5 flex flex-col justify-center items-center">
+            <div class="pic">
+              <img class="w-full h-full "
+                src=""
+                alt="">
+            </div>
+            <div class="name mt-4"><a href=""></a></div>
+            <div class="price mt-4 text-lg"><a href="">₹</a></div>
+            <div class="bag w-full flex justify-center items-center mt-2">
+              <p>ADD TO BAG</p>
+              <i class="fa-regular fa-heart"></i>
+            </div>
+          </div> 
         </div>
       </div>
     </section>
