Some more fine tuning

--- a/Elton/STATIONARY.html
+++ b/Elton/STATIONARY.html
@@ -38,7 +38,7 @@
     <nav
       class="bg-color 2xl:px-56 xl:px-40 lg:px-16 md:px-0 py-5 flex lg:justify-between justify-evenly sm:gap-4 items-center"
     >
-      <div class="lg:hidden block md:xl:m-0 m-0 sm:mr-4">
+      <div class="lg:hidden block md:m-0 sm:mr-4">
         <svg viewBox="0 0 24 24" class="h-6 w-6 stroke-slate-900">
           <path
             d="M3.75 12h16.5M3.75 6.75h16.5M3.75 17.25h16.5"
@@ -64,7 +64,7 @@
           ></i>
         </button>
       </div>
-      <div class="text-2xl md:xl:m-0 m-0 ml-auto">
+      <div class="text-2xl md:m-0 ml-auto">
         <i
           class="fa-solid fa-magnifying-glass lg:px-2 px-1 lg:mx-2 mx-1 cursor-pointer md:hidden inline" 
         ></i>
@@ -88,7 +88,7 @@
       </div>
     </nav>
 
-    <nav class="2xl:px-56 xl:px-40 lg:px-2 lg:block hidden py-4">
+    <nav class="2xl:px-56 xl:px-40 lg:px-2 lg:block hidden bg-white py-4">
       <ul class="flex justify-between text-white relative">
         <li class="dropdown">
           <a
@@ -698,7 +698,7 @@
         <li class="dropdown">
           <a
             href=""
-            class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
+            class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#FF7E00]"
             >STATIONERY & GIFTS</a
           >
 
@@ -829,10 +829,11 @@
       </ul>
     </nav>
 
-  </div>
+  </div> 
 
   <main>
-    <p class="text-center text-sm pt-8"><a href="">Home</a> <i class="fa-solid fa-angle-right"></i> <a href="">Stationery & Gifts</a></p>
+    
+    <p class="text-center text-sm pt-8"><a href="">Home</a> <i class="fa-solid fa-angle-right"></i> <a href="">Stationary & Gifts</a></p>
     <p class="text-center text-3xl pb-8 pt-4">Stationery & Gifts</p>
     <section class="flex">
       <aside class="lg:block hidden">
@@ -1146,7 +1147,7 @@
             <input
               type="email"
               placeholder="Email Id"
-              class="py-3 px-2 border-2 rounded-lg border-black w-full"
+              class="py-3 px-2 border rounded-lg border-black w-full"
             />
             <i
               class="fa-solid fa-arrow-right absolute right-[10px] bottom-[25%] text-2xl"
@@ -1229,9 +1230,9 @@
             <li><a href="">The Write Place</a></li>
           </div>
 
-          <div class="footer-content lg:w-fit w-full md:xl:mt-0 lg:mt-3 mt-2 xl:mt-8 lg:mt-3 mt-2">
+          <div class="footer-content lg:w-fit w-full md:xl:mt-0 lg:mt-3 mt-2 xl:mt-8 ">
             <h3
-              class="lg:font-semi-bold font-bold text-lg leading-6 tracking-wider py-2 leading-5"
+              class="lg:font-semi-bold font-bold text-lg  tracking-wider py-2 leading-5"
             >
               Useful links
             </h3>
@@ -1245,9 +1246,9 @@
             <li><a href="">Crossword Gift Card T&C</a></li>
           </div>
 
-          <div class="footer-content lg:w-fit w-full md:xl:mt-0 lg:mt-3 mt-2 xl:mt-8 lg:mt-3 mt-2">
+          <div class="footer-content lg:w-fit w-full md:xl:mt-0 lg:mt-3 mt-2 xl:mt-8 ">
             <h3
-              class="lg:font-semi-bold font-bold text-lg leading-6 tracking-wider py-2 leading-5"
+              class="lg:font-semi-bold font-bold text-lg  tracking-wider py-2 leading-5"
             >
               About us
             </h3>
