--- a/Elton/TOP50.html
+++ b/Elton/TOP50.html
@@ -38,7 +38,7 @@
     <nav
       class="bg-color 2xl:px-56 xl:px-40 lg:px-16 md:px-0 py-5 flex lg:justify-between justify-evenly sm:gap-4 items-center"
     >
-      <div class="lg:hidden block md:xl:m-0 m-0 sm:mr-4">
+      <div class="lg:hidden block md:m-0 sm:mr-4">
         <svg viewBox="0 0 24 24" class="h-6 w-6 stroke-slate-900">
           <path
             d="M3.75 12h16.5M3.75 6.75h16.5M3.75 17.25h16.5"
@@ -64,7 +64,7 @@
           ></i>
         </button>
       </div>
-      <div class="text-2xl md:xl:m-0 m-0 ml-auto">
+      <div class="text-2xl md:m-0 ml-auto">
         <i
           class="fa-solid fa-magnifying-glass lg:px-2 px-1 lg:mx-2 mx-1 cursor-pointer md:hidden inline" 
         ></i>
@@ -88,7 +88,7 @@
       </div>
     </nav>
 
-    <nav class="2xl:px-56 xl:px-40 lg:px-2 lg:block hidden py-4">
+    <nav class="2xl:px-56 xl:px-40 lg:px-2 lg:block hidden bg-white py-4">
       <ul class="flex justify-between text-white relative">
         <li class="dropdown">
           <a
@@ -168,7 +168,7 @@
         <li class="dropdown">
           <a
             href=""
-            class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000] "
+            class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#FF7E00] "
             >TOP 50</a
           >
           <div
@@ -1178,7 +1178,7 @@
             <input
               type="email"
               placeholder="Email Id"
-              class="py-3 px-2 border-2 rounded-lg border-black w-full"
+              class="py-3 px-2 border rounded-lg border-black w-full"
             />
             <i
               class="fa-solid fa-arrow-right absolute right-[10px] bottom-[25%] text-2xl"
@@ -1243,13 +1243,12 @@
             </div>
           </div>
 
-          <div class="footer-content lg:w-fit w-full md:xl:mt-0 lg:mt-3 mt-2 xl:mt-8 lg:mt-3 mt-2">
+          <div class="footer-content lg:w-fit w-full md:xl:mt-0  xl:mt-8 lg:mt-3 mt-2">
             <h3
-              class="lg:font-semi-bold font-bold text-lg leading-6 tracking-wider py-2 leading-5"
+              class="lg:font-semi-bold font-bold text-lg  tracking-wider py-2 leading-5"
             >
               Category
             </h3>
-            <!-- <span class="h-px w-full inline-block bg-black"></span> -->
             <li><a href="">New & Noteworthy</a></li>
             <li><a href="">Top 50</a></li>
             <li><a href="">Crossword Recommends</a></li>
@@ -1261,9 +1260,9 @@
             <li><a href="">The Write Place</a></li>
           </div>
 
-          <div class="footer-content lg:w-fit w-full md:xl:mt-0 lg:mt-3 mt-2 xl:mt-8 lg:mt-3 mt-2">
+          <div class="footer-content lg:w-fit w-full md:xl:mt-0  xl:mt-8 lg:mt-3 mt-2">
             <h3
-              class="lg:font-semi-bold font-bold text-lg leading-6 tracking-wider py-2 leading-5"
+              class="lg:font-semi-bold font-bold text-lg  tracking-wider py-2 leading-5"
             >
               Useful links
             </h3>
@@ -1277,9 +1276,9 @@
             <li><a href="">Crossword Gift Card T&C</a></li>
           </div>
 
-          <div class="footer-content lg:w-fit w-full md:xl:mt-0 lg:mt-3 mt-2 xl:mt-8 lg:mt-3 mt-2">
+          <div class="footer-content lg:w-fit w-full md:xl:mt-0  xl:mt-8 lg:mt-3 mt-2">
             <h3
-              class="lg:font-semi-bold font-bold text-lg leading-6 tracking-wider py-2 leading-5"
+              class="lg:font-semi-bold font-bold text-lg  tracking-wider py-2 leading-5"
             >
               About us
             </h3>
@@ -1289,9 +1288,9 @@
             <li><a href=""> Kids Club</a></li>
           </div>
 
-          <div class="footer-content lg:w-fit w-full md:xl:mt-0 lg:mt-3 mt-2 xl:mt-8 lg:mt-3 mt-2">
+          <div class="footer-content lg:w-fit w-full md:xl:mt-0  xl:mt-8 lg:mt-3 mt-2">
             <h3
-              class="lg:font-semi-bold font-bold text-lg leading-6 tracking-wider py-2 leading-5"
+              class="lg:font-semi-bold font-bold text-lg  tracking-wider py-2 leading-5"
             >
               Get in Touch
             </h3>
