--- a/Elton/sale.html
+++ b/Elton/sale.html
@@ -7,7 +7,6 @@
   <script src="https://cdn.tailwindcss.com"></script>
     <style type="text/tailwindcss"></style>
 
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -90,7 +89,7 @@
       </div>
     </nav>
 
-    <nav class="2xl:px-56 xl:px-40 lg:px-2 lg:block hidden py-4">
+    <nav class="2xl:px-56 xl:px-40 lg:px-2 lg:block hidden py-4 bg-white">
       <ul class="flex justify-between text-white relative">
         <li class="dropdown">
           <a
@@ -823,7 +822,7 @@
         <li class="dropdown">
           <a
             href=""
-            class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
+            class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#FF7E00]"
             >SALE</a
           >
         </li>
@@ -1183,7 +1182,7 @@
             <input
               type="email"
               placeholder="Email Id"
-              class="py-3 px-2 border-2 rounded-lg border-black w-full"
+              class="py-3 px-2 border rounded-lg border-black w-full"
             />
             <i
               class="fa-solid fa-arrow-right absolute right-[10px] bottom-[25%] text-2xl"
@@ -1248,9 +1247,9 @@
             </div>
           </div>
 
-          <div class="footer-content lg:w-fit w-full md:xl:mt-0 lg:mt-3 mt-2 xl:mt-8 lg:mt-3 mt-2">
+          <div class="footer-content lg:w-fit w-full md:xl:mt-0  xl:mt-8 lg:mt-3 mt-2">
             <h3
-              class="lg:font-semi-bold font-bold text-lg leading-6 tracking-wider py-2 leading-5"
+              class="lg:font-semi-bold font-bold text-lg  tracking-wider py-2 leading-5"
             >
               Category
             </h3>
