linking other member page to homepage

--- a/Ibrahim/find my order/findmyorder.html
+++ b/Ibrahim/find my order/findmyorder.html
@@ -42,7 +42,7 @@
       <nav class="2xl:px-56 xl:px-40 lg:px-16 px-0 py-1 bg-black reponsive">
         <ul class="flex justify-end text-white text-sm relative">
           <li>
-            <a href="../Ibrahim/find my order/findmyorder.html" class="md:px-4 px-2 md:mx-2 mx-1"
+            <a href="../find my order/findmyorder.html" class="md:px-4 px-2 md:mx-2 mx-1"
               ><i class="fa-solid fa-location-dot px-1 mx-1"></i> Find a
               store</a
             ><span
@@ -50,7 +50,7 @@
             ></span>
           </li>
           <li>
-            <a href="../Ibrahim/sign_in/signin.html" class="px-4 mx-2">Track your order</a
+            <a href="../sign_in/signin.html" class="px-4 mx-2">Track your order</a
             ><span
               class="md:h-4 w-px bg-white md:inline-block inline md:align-text-bottom align-top"
             ></span>
@@ -97,16 +97,12 @@
           <i
             class="fa-regular fa-user lg:px-2 px-0 lg:mx-2 mx-1 cursor-pointer"
           ></i></a>
-          <a href="../Ibrahim/Wishlist/wishlist.html">
+          <a href="../Wishlist/wishlist.html">
           <i
             class="fa-regular fa-heart lg:px-2 px-0 lg:mx-2 mx-1 relative cursor-pointer"
-            ><span
-              class="absolute md:inline-block hidden w-4 h-4 rounded-full right-0 bg-black "
-              ><span
-                class="absolute inline-block w-2 h-2 rounded-full right-0 bg-white"
-              ></span></span
-          ></i></a>
-          <a href="../Ibrahim/Bag/bag.html">
+            >
+          </i></a>
+          <a href="../Wishlist/wishlist.html">
           <i
             class="fa-solid fa-bag-shopping lg:px-2 px-0 lg:mx-2 mx-1 cursor-pointer"
           ></i></a>
@@ -117,7 +113,7 @@
         <ul class="flex justify-between text-white relative lg:w-full w-[1100px]">
           <li class="dropdown ">
             <a
-              href=""
+              href="../../Saiqua/news.html"
               class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
               >NEW & NOTEWORTHY</a
             >
@@ -192,7 +188,7 @@
 
           <li class="dropdown ">
             <a
-              href=""
+              href="../../Elton/TOP50.html"
               class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000] "
               >TOP 50</a
             >
@@ -265,7 +261,7 @@
 
           <li class="dropdown">
             <a
-              href=""
+              href="../../siddharth/Recommends.html"
               class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]  "
               >CROSSWORD RECOMMENDS</a
             >
@@ -273,7 +269,7 @@
 
           <li class="dropdown">
             <a
-              href=""
+              href="../../Elton/book.html"
               class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
               >BOOKS</a
             >
@@ -444,7 +440,7 @@
 
           <li class="dropdown">
             <a
-              href="../Ibrahim/kids book/kidbook.html"
+              href="../../Ibrahim/kids book/kidbook.html"
               class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
               >KIDS BOOKS</a
             >
@@ -533,7 +529,7 @@
 
           <li class="dropdown">
             <a
-              href=""
+              href="../../siddharth/young_adult.html"
               class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
               >Young Adult</a
             >
@@ -572,7 +568,7 @@
 
           <li class="dropdown">
             <a
-              href=""
+              href="../../Saiqua/toys.html"
               class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
               >TOYS & GAMES</a
             >
@@ -722,7 +718,7 @@
            
           <li class="dropdown">
             <a
-              href=""
+              href="../../Elton/STATIONARY.html"
               class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
               >STATIONERY & GIFTS</a
             >
@@ -845,7 +841,7 @@
 
           <li class="dropdown">
             <a
-              href="https://www.crossword.in/collections/sale-1"
+              href="../../Elton/sale.html"
               class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
               >SALE</a
             >
