--- a/siddharth/young_adult.html
+++ b/siddharth/young_adult.html
@@ -51,7 +51,8 @@
         </svg>
       </div>
       <div>
-        <img src="assets/logo.svg" alt="" class="" />
+        <a href="../docs/index.html">
+        <img src="assets/logo.svg" alt="" class="" /></a>
       </div>
       <div class="flex w-5/12 md:flex hidden">
         <input
@@ -77,11 +78,7 @@
         <a href="../Ibrahim/Wishlist/wishlist.html">
         <i
           class="fa-regular fa-heart lg:px-2 px-1 lg:mx-2 mx-1 relative cursor-pointer"
-          ><span
-            class="absolute inline-block w-4 h-4 rounded-full right-0 bg-black"
-            ><span
-              class="absolute inline-block w-2 h-2 rounded-full right-0 bg-white"
-            ></span></span></i></a>
+          ></i></a>
         <a href="../Ibrahim/Bag/bag.html">
         <i
           class="fa-solid fa-bag-shopping lg:px-2 px-1 lg:mx-2 mx-1 cursor-pointer"
@@ -93,7 +90,7 @@
       <ul class="flex justify-between text-white relative">
         <li class="dropdown">
           <a
-            href=""
+            href="../Saiqua/news.html"
             class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
             >NEW & NOTEWORTHY</a
           >
@@ -168,7 +165,7 @@
 
         <li class="dropdown">
           <a
-            href=""
+            href="../Elton/TOP50.html"
             class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000] "
             >TOP 50</a
           >
@@ -241,7 +238,7 @@
 
         <li class="dropdown">
           <a
-            href=""
+            href="../siddharth/Recommends.html"
             class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]  "
             >CROSSWORD RECOMMENDS</a
           >
@@ -249,7 +246,7 @@
 
         <li class="dropdown">
           <a
-            href=""
+            href="../Elton/book.html"
             class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#FF7E00]"
             >BOOKS</a
           >
@@ -420,7 +417,7 @@
 
         <li class="dropdown">
           <a
-            href=""
+            href="../Ibrahim/kids book/kidbook.html"
             class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
             >KIDS BOOKS</a
           >
@@ -509,7 +506,7 @@
 
         <li class="dropdown">
           <a
-            href=""
+            href="../siddharth/young_adult.html"
             class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
             >Young Adult</a
           >
@@ -548,7 +545,7 @@
 
         <li class="dropdown">
           <a
-            href=""
+            href="../Saiqua/toys.html"
             class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
             >TOYS & GAMES</a
           >
@@ -698,7 +695,7 @@
          
         <li class="dropdown">
           <a
-            href=""
+            href="../Elton/STATIONARY.html"
             class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
             >STATIONERY & GIFTS</a
           >
@@ -821,7 +818,7 @@
 
         <li class="dropdown">
           <a
-            href=""
+            href="../Elton/sale.html"
             class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
             >SALE</a
           >
