--- a/Ibrahim/Gift card/giftcard.html
+++ b/Ibrahim/Gift card/giftcard.html
@@ -51,7 +51,7 @@
         <nav class="2xl:px-56 xl:px-40 lg:px-16 px-0 py-1 bg-black reponsive">
           <ul class="flex justify-end text-white text-sm relative">
             <li>
-              <a href="../Ibrahim/find my order/findmyorder.html" class="md:px-4 px-2 md:mx-2 mx-1"
+              <a href="../find my order/findmyorder.html" class="md:px-4 px-2 md:mx-2 mx-1"
                 ><i class="fa-solid fa-location-dot px-1 mx-1"></i> Find a
                 store</a
               ><span
@@ -59,7 +59,7 @@
               ></span>
             </li>
             <li>
-              <a href="../Ibrahim/sign_in/signin.html" class="px-4 mx-2">Track your order</a
+              <a href="../sign_in/signin.html" class="px-4 mx-2">Track your order</a
               ><span
                 class="md:h-4 w-px bg-white md:inline-block inline md:align-text-bottom align-top"
               ></span>
@@ -102,20 +102,16 @@
             <i
               class="fa-solid fa-magnifying-glass lg:px-2 px-1 lg:mx-2 mx-1 cursor-pointer md:hidden inline" 
             ></i>
-            <a href="../Ibrahim/sign_in/signin.html">
+            <a href="../sign_in/signin.html">
             <i
               class="fa-regular fa-user lg:px-2 px-0 lg:mx-2 mx-1 cursor-pointer"
             ></i></a>
-            <a href="../Ibrahim/Wishlist/wishlist.html">
+            <a href="../Wishlist/wishlist.html">
             <i
               class="fa-regular fa-heart lg:px-2 px-0 lg:mx-2 mx-1 relative cursor-pointer"
-              ><span
-                class="absolute md:inline-block hidden w-4 h-4 rounded-full right-0 bg-black "
-                ><span
-                  class="absolute inline-block w-2 h-2 rounded-full right-0 bg-white"
-                ></span></span
-            ></i></a>
-            <a href="../Ibrahim/Bag/bag.html">
+              >
+            </i></a>
+            <a href="../Bag/bag.html">
             <i
               class="fa-solid fa-bag-shopping lg:px-2 px-0 lg:mx-2 mx-1 cursor-pointer"
             ></i></a>
@@ -126,7 +122,7 @@
           <ul class="flex justify-between text-white relative lg:w-full w-[1100px]">
             <li class="dropdown ">
               <a
-                href=""
+                href="../../Saiqua/news.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
                 >NEW & NOTEWORTHY</a
               >
@@ -201,7 +197,7 @@
   
             <li class="dropdown ">
               <a
-                href=""
+                href="../../Elton/TOP50.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000] "
                 >TOP 50</a
               >
@@ -274,7 +270,7 @@
   
             <li class="dropdown">
               <a
-                href=""
+                href="../../siddharth/Recommends.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]  "
                 >CROSSWORD RECOMMENDS</a
               >
@@ -282,7 +278,7 @@
   
             <li class="dropdown">
               <a
-                href=""
+                href="../../Elton/book.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
                 >BOOKS</a
               >
@@ -453,7 +449,7 @@
   
             <li class="dropdown">
               <a
-                href="../Ibrahim/kids book/kidbook.html"
+                href="../../Ibrahim/kids book/kidbook.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
                 >KIDS BOOKS</a
               >
@@ -542,7 +538,7 @@
   
             <li class="dropdown">
               <a
-                href=""
+                href="../../siddharth/young_adult.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
                 >Young Adult</a
               >
@@ -581,7 +577,7 @@
   
             <li class="dropdown">
               <a
-                href=""
+                href="../../Saiqua/toys.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
                 >TOYS & GAMES</a
               >
@@ -731,7 +727,7 @@
              
             <li class="dropdown">
               <a
-                href=""
+                href="../../Elton/STATIONARY.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
                 >STATIONERY & GIFTS</a
               >
@@ -854,7 +850,7 @@
   
             <li class="dropdown">
               <a
-                href="https://www.crossword.in/collections/sale-1"
+                href="../../Elton/sale.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
                 >SALE</a
               >
