--- a/siddharth/Recommends.html
+++ b/siddharth/Recommends.html
@@ -97,12 +97,7 @@
             <a href="../Ibrahim/Wishlist/wishlist.html">
             <i
               class="fa-regular fa-heart lg:px-2 px-0 lg:mx-2 mx-1 relative cursor-pointer"
-              ><span
-                class="absolute md:inline-block hidden w-4 h-4 rounded-full right-0 bg-black "
-                ><span
-                  class="absolute inline-block w-2 h-2 rounded-full right-0 bg-white"
-                ></span></span
-            ></i></a>
+              ></i></a>
             <a href="../Ibrahim/Bag/bag.html">
             <i
               class="fa-solid fa-bag-shopping lg:px-2 px-0 lg:mx-2 mx-1 cursor-pointer"
@@ -114,7 +109,7 @@
           <ul class="flex justify-between text-white relative lg:w-full w-[1100px]">
             <li class="dropdown ">
               <a
-                href=""
+                href="../Saiqua/news.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
                 >NEW & NOTEWORTHY</a
               >
@@ -189,7 +184,7 @@
 
             <li class="dropdown ">
               <a
-                href=""
+                href="../Elton/TOP50.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000] "
                 >TOP 50</a
               >
@@ -262,7 +257,7 @@
 
             <li class="dropdown">
               <a
-                href=""
+                href="../siddharth/Recommends.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]  "
                 >CROSSWORD RECOMMENDS</a
               >
@@ -270,7 +265,7 @@
 
             <li class="dropdown">
               <a
-                href=""
+                href="../Elton/book.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
                 >BOOKS</a
               >
@@ -530,7 +525,7 @@
 
             <li class="dropdown">
               <a
-                href=""
+                href="../siddharth/young_adult.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
                 >Young Adult</a
               >
@@ -569,7 +564,7 @@
 
             <li class="dropdown">
               <a
-                href=""
+                href="../Saiqua/toys.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
                 >TOYS & GAMES</a
               >
@@ -719,7 +714,7 @@
              
             <li class="dropdown">
               <a
-                href=""
+                href="../Elton/STATIONARY.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
                 >STATIONERY & GIFTS</a
               >
@@ -842,7 +837,7 @@
 
             <li class="dropdown">
               <a
-                href="https://www.crossword.in/collections/sale-1"
+                href="../Elton/sale.html"
                 class="text-xs leading-[18px] font-bold tracking-[1.04px] uppercase text-[#000]"
                 >SALE</a
               >
