--- a/Elton/TOP50.html
+++ b/Elton/TOP50.html
@@ -41,7 +41,7 @@
       <div>
         <a href="../Docs/index.html"><img src="asset/logo.svg" alt="" class="" /></a>
       </div>
-      <div class="flex w-5/12 md:flex hidden">
+      <div class="w-5/12 md:flex hidden">
         <input type="text" placeholder="Search by Title, Author, ISBN" required
           class="w-full rounded px-4 placeholder:text-gray-300" />
         <button class="w-12 h-10 bg-black rounded outline-none border-0">
