--- a/Saiqua/toys.html
+++ b/Saiqua/toys.html
@@ -846,7 +846,7 @@
   <main>
     <p class="text-center text-3xl py-8">Toys & Games</p>
     <section class="flex">
-      <aside class="">
+      <aside class="lg:block hidden">
         <span class="">FILTERS</span>
         <div class="Category head border-slate-700 border-2 w-8/12 p-2 mb-3.5">
           <p class="flex justify-between"><span class="head_ing font-semibold mb-2">Category</span><i
