--- a/Ibrahim/kids book/kidbook.html
+++ b/Ibrahim/kids book/kidbook.html
@@ -866,8 +866,8 @@
            <div class="text-center">
                <a href="https://ibrahim1249.github.io/cross-word/Docs/" class="text-xs text-[#303030]">home</a>
                <span class="greater" > > </span>
-               <a href="#" class="text-xs text-[#303030]">gift</a>
-               <h2 class="text-2xl font-semi-bold leading-[5rem] text-[#303030] mb-[10px]">Gift Cards</h2>
+               <a href="#" class="text-xs text-[#303030]">kids book</a>
+               <h2 class="text-2xl font-semi-bold leading-[5rem] text-[#303030] mb-[10px]">Kids Books</h2>
 
            </div>
         </div>
